# chromium120

./: .gclient  .gclient_entries  .gclient_previous_custom_vars  .gclient_previous_sync_commits  README.md  ci.bash  oss-pkg-info.yaml
.github/workflows/: ci.yml
src/: BUILD.gn  DEPS
src/base/: BUILD.gn  base_paths_posix.cc  base_switches.cc  base_switches.h  check_example.cc  command_line.h  logging.cc  path_service.cc  path_service.h
src/base/allocator/: partition_alloc_support.cc
src/base/debug/: stack_trace.cc
src/base/files/: file.h  file_path.h
src/base/functional/: unretained_traits.h
src/base/memory/: memory_pressure_listener.cc  weak_ptr.h
src/base/metrics/: persistent_histogram_allocator.h
src/base/neva/: BUILD.gn  base_switches.cc  base_switches.h  neva_paths.cc
src/base/process/: process_metrics.h  process_metrics_linux.cc
src/base/strings/: to_string.h
src/base/system/: sys_info.cc  sys_info_linux.cc
src/base/threading/: thread_restrictions.h
src/base/trace_event/: builtin_categories.h  heap_profiler_allocation_context.cc  heap_profiler_allocation_context.h  trace_config.h  trace_log.cc
src/base/types/: strong_alias.h
src/buildtools/reclient_cfgs/: reproxy.cfg
src/cc/: BUILD.gn
src/cc/animation/: scroll_offset_animation_curve.cc  scroll_offset_animation_curve.h  scroll_offset_animation_curve_factory.cc  scroll_offset_animation_curve_factory.h
src/cc/base/: switches.h
src/cc/layers/: layer.cc  render_surface_impl.cc
src/cc/metrics/: compositor_timing_history.cc
src/cc/paint/: paint_op_reader.cc
src/cc/raster/: staging_buffer_pool.cc
src/cc/resources/: resource_pool.cc
src/cc/tiles/: gpu_image_decode_cache.cc  gpu_image_decode_cache.h  software_image_decode_cache.cc  software_image_decode_cache.h
src/cc/trees/: layer_tree_host_impl.cc  layer_tree_host_impl.h  layer_tree_impl.cc  layer_tree_settings.h  proxy_impl.cc
src/chrome/common/: chrome_paths.cc
src/components/cookie_config/: BUILD.gn  cookie_store_util.cc  cookie_store_util_neva.cc  cookie_store_util_neva.h
src/components/media_capture_util/: devices_dispatcher.cc  devices_dispatcher.h
src/components/permissions/: permission_context_base.cc  permission_context_base.h  permission_uma_util.cc  permission_util.cc
src/components/search_engines/: template_url_prepopulate_data.cc
src/components/watchdog/: watchdog.cc  watchdog.h
src/content/app/: content_main_runner_impl.cc  content_main_runner_impl.h
src/content/browser/: BUILD.gn  browser_interface_binders.cc  network_service_browsertest.cc  origin_agent_cluster_isolation_state.h  storage_partition_impl.cc  storage_partition_impl.h  utility_process_host.cc
src/content/child/: blink_platform_impl.cc  runtime_features.cc
src/content/common/: BUILD.gn  renderer.mojom  skia_utils.cc  user_agent.cc
src/content/gpu/: BUILD.gn  gpu_child_thread.cc  gpu_child_thread.h
src/content/renderer/: BUILD.gn  render_frame_impl.cc  render_frame_impl.h  render_thread_impl.cc  render_thread_impl.h  renderer_blink_platform_impl.cc  renderer_blink_platform_impl.h  renderer_main.cc
src/content/shell/: BUILD.gn
src/content/test/: BUILD.gn  content_test_bundle_data.filelist
src/content/utility/: utility_main.cc
src/crypto/: BUILD.gn  nss_util.cc  nss_util_internal.h
src/extensions/: BUILD.gn
src/extensions/browser/: BUILD.gn  extension_function_histogram_value.h  extension_host.h  extension_navigation_throttle.cc  extension_prefs.cc  pref_names.cc  pref_names.h
src/extensions/common/: switches.cc  switches.h
src/extensions/renderer/: BUILD.gn
src/extensions/shell/: BUILD.gn
src/gin/: BUILD.gn  isolate_holder.cc  v8_initializer.cc
src/gpu/config/: gpu_driver_bug_list.json  gpu_lists_version.h  gpu_preferences.cc  gpu_preferences.h  gpu_workaround_list.txt  software_rendering_list.json
src/gpu/webgpu/: DAWN_VERSION
src/ipc/: BUILD.gn  ipc_message_start.h  trace_ipc_message.cc
src/media/: BUILD.gn  media_options.gni
src/media/audio/: BUILD.gn  audio_device_description.cc  audio_device_description.h  audio_input_delegate.h  audio_input_device.cc  audio_logging.h  audio_manager.h  audio_manager_base.cc  audio_thread_impl.cc
src/media/base/: BUILD.gn  audio_buffer.cc  audio_parameters.h  audio_renderer_mixer.h  audio_renderer_mixer_input.cc  cdm_context.h  decoder.h  media_switches.cc  mime_util_internal.cc  mime_util_internal.h  mime_util_unittest.cc  pipeline_status.cc  pipeline_status.h  user_input_monitor_unittest.cc  video_frame.cc
src/media/capture/: BUILD.gn
src/media/cdm/: BUILD.gn  cdm_adapter.cc  cdm_adapter.h  cdm_module.cc  cdm_type_conversion.cc  cdm_type_conversion.h  cdm_wrapper.h  supported_cdm_versions.h
src/media/filters/: BUILD.gn  stream_parser_factory.cc
src/media/gpu/: BUILD.gn  args.gni  frame_size_estimator_unittest.cc  gpu_video_decode_accelerator_factory.cc  gpu_video_decode_accelerator_factory.h  gpu_video_encode_accelerator_factory.cc  video_frame_mapper_factory.cc
src/media/gpu/webos/: BUILD.gn  webos_codec_utils.h  webos_vda_utils.cc  webos_vda_utils.h  webos_video_decode_accelerator.cc  webos_video_decode_accelerator.h  webos_video_encode_accelerator.cc  webos_video_encode_accelerator.h
src/media/neva/: BUILD.gn
src/media/renderers/: BUILD.gn
src/media/video/: video_encode_accelerator_adapter.cc
src/net/: BUILD.gn
src/net/base/: features.cc  features.h  filename_util.cc  (+2 more)
src/neva/: BUILD.gn  gow.gn  neva.gni
src/url/: gurl.cc  gurl.h  origin.cc  origin.h  url_canon_filesystemurl.cc  url_constants.cc  url_constants.h
src/v8/: BUILD.gn
src/webos/: BUILD.gn  webapp_window.cc  webapp_window.h  webapp_window_delegate.cc  webapp_window_delegate.h  webos_platform.cc  webview_base.cc  webview_base.h  webview_profile.cc
src/webos/browser_shell/: BUILD.gn  browser_shell_webos_main.cc  browser_shell_webos_main_delegate.cc  browser_shell_webos_main_delegate.h
src/webos/install/browser_shell/: BUILD.gn  browser-shell.perm.json  browser-shell.role.json.in  run_browser_shell.in
src/webos/install/browser_shell/legacy/: browser-shell.role.json.in
(+1009 files in other folders)
