# Copyright 2023 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("browser_shell_webos_lib") {
  sources = [
    "browser_shell_webos_main_delegate.cc",
    "browser_shell_webos_main_delegate.h",
  ]

  deps = [
    "//base",
    "//neva/browser_shell:browser_shell_lib",
    "//webos:weboswebruntime"
  ]

  public_deps = [
    "//third_party/boringssl:boringssl"
  ]

  include_dirs = [ "." ]
}

executable("browser_shell_webos") {
  # testonly mode is required for CBE build
  testonly = true

  output_name = "browser_shell_webos"

  sources = [ "browser_shell_webos_main.cc" ]

  if (use_cbe && is_browser_shell_cbe) {
    deps = [ "//neva/cbe:chromium_cbe" ]
  } else {
    deps = [ ":browser_shell_webos_lib" ]
  }
}
