# Copyright 2022 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")
import("//webos/install/cbe.gni")
import("//webos/install/install.gni")
import("//webos/install/paths.gni")
import("//webos/install/sysbus.gni")

install_manifest("browser_shell_manifest") {
  sources = []
  if (can_use_legacy_luna_role_files) {
    sources = [ "legacy/browser-shell.manifest.json" ]
  } else {
    sources = [ "browser-shell.manifest.json" ]
  }
}

install_legacy_services("browser_shell_legacy_services") {
  app = "$browser_shell_app"
  exename = "$browser_shell_exe"
}

install_containers("browser_shell_container") {
  sources = [ "//webos/install/services/app.container.json.in" ]
  exename = "$browser_shell_exe"
  app = "$browser_shell_app"
}

install_legacy_roles("browser_shell_legacy_roles") {
  sources = [ "legacy/browser-shell.role.json.in" ]
  exename = "$browser_shell_exe"
  app = "$browser_shell_app"
}

install_client_permissions("browser_shell_permissions") {
  sources = [ "browser-shell.perm.json" ]
}

install_contemporary_roles("browser_shell_roles") {
  sources = [ "browser-shell.role.json.in" ]
  exename = "$browser_shell_exe"
  app = "$browser_shell_app"
}

install_services("browser_shell_services") {
  app = "$browser_shell_app"
  exename = "$browser_shell_exe"
}

install_run_script("browser_shell_run_script") {
  sources = [ "run_browser_shell.in" ]
  injections = [
    "v8/browser_shell",
    "v8/memorymanager"
  ]

  if (use_neva_chrome_extensions) {
    injections += [ "v8/chrome_extensions" ]
  }

  outputs = [ "$image_path/$browser_shell_dir/run_browser_shell" ]
}

copy("browser_shell") {
  testonly = true

  sources = [ "$root_out_dir/browser_shell_webos" ]
  outputs = [ "$image_path/$browser_shell_exe" ]

  deps = [
    "//webos/browser_shell:browser_shell_webos",
    ":browser_shell_run_script",
    ]

  if (can_use_legacy_luna_role_files) {
    deps += [
      ":browser_shell_legacy_services",
      ":browser_shell_legacy_roles",
    ]
  } else {
    deps += [
      ":browser_shell_permissions",
      ":browser_shell_roles",
      ":browser_shell_services",
    ]
  }
}
